# json20

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp
src/: json.cpp  json.hpp
tests/: common.hpp  test_semantics_asign.cpp  test_semantics_construct.cpp  test_semantics_convert.cpp  test_semantics_destruct.cpp  test_text_dumps.cpp  test_text_loads.cpp  test_text_readerror.cpp  test_value_at.cpp  test_value_compare.cpp  test_value_emplace.cpp  test_value_equal.cpp  test_value_get.cpp  test_value_get_if.cpp  test_value_index.cpp  test_value_is.cpp  test_value_negate.cpp  test_value_visit.cpp
